--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-  "name": "CHANGE THIS : Extension boilerplate",
+  "name": "PortalAutoLogin",
   "version": "0.0.1",
-  "manifest_version": 2,
-  "description": "This extension was created with the awesome extensionizr.com",
-  "homepage_url": "http://extensionizr.com",
+  "manifest_version": 3,
+  "description": "This extension was created to automatically log into the Parker Portal, so I can save a lot of time.",
+  "homepage_url": "https://github.com/js802025/PortalAutoLogin",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
@@ -11,22 +11,28 @@
   },
   "default_locale": "en",
   "background": {
-    "scripts": [
-      "src/bg/background.js"
-    ],
-    "persistent": true
+    "service_worker": 
+      "background.js",
+      "type": "module"
   },
-  "options_page": "src/options_custom/index.html",
+  "options_page": "src/options/options.html",
   "permissions": [
-    "tabs"
+    "tabs", "storage"
   ],
   "content_scripts": [
     {
       "matches": [
-        "https://www.google.com/*"
+        "https://fwparker.myschoolapp.com/*"
       ],
       "js": [
         "src/inject/inject.js"
+      ]
+    }, {
+      "matches": [
+        "https://auth1.fwparker.org/*"
+      ],
+      "js": [
+        "src/inject/signIn.js"
       ]
     }
   ]
